# ada-bot

./: README.md  pyproject.toml
app/: bot.py
app/games/: csgo.py  valorant.py
