[tool.poetry]
name = "ada-bot"
version = "0.1.0"
description = ""
authors = ["Lucas Ferreira <lucasferreiraek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
